# glrust

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  ROADMAP.md  ROADMAP_pure_rust_glr.md
.github/workflows/: ci.yml
glr-bench/: Cargo.toml
glr-bench/benches/: parse.rs
glr-bench/src/: lib.rs
glr-conformance/: Cargo.toml
glr-conformance/src/: lib.rs
glr-core/: Cargo.toml
glr-core/src/: dfa.rs  grammar.rs  lib.rs  parse_table.rs  symbol.rs  tree.rs
glr-engine/: Cargo.toml
glr-engine/src/: gss.rs  lib.rs  parser.rs
glr-engine/tests/: glr_engine.rs
glr-engine/tests/common/: mod.rs
glr-fuzz/: Cargo.toml
glr-fuzz/src/: lib.rs
glr-grammar/: Cargo.toml
glr-grammar/src/: compile.rs  json_schema.rs  lib.rs  main.rs  table_gen.rs
glr-lexer/: Cargo.toml
glr-lexer/src/: builtin_lexer.rs  dfa.rs  external_scanner.rs  lib.rs  scanner.rs  token.rs
glr-macro/: Cargo.toml
glr-macro/src/: lib.rs
glr-query/: Cargo.toml
glr-query/src/: compile.rs  execute.rs  lib.rs  query.rs
glr-syntax/: Cargo.toml
glr-syntax/src/: highlight.rs  lib.rs
glrust/: Cargo.toml
glrust/src/: lib.rs
