[package]
name = "glr-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

description = "Conformance test suite: compares GLR parser output against tree-sitter C baseline"
keywords = ["glr", "conformance", "testing", "parser", "tree-sitter"]
documentation = "https://docs.rs/glr-conformance"

[dependencies]
glr-core = { path = "../glr-core" }
glr-engine = { path = "../glr-engine" }
glr-grammar = { path = "../glr-grammar" }
