[package]
name = "glr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

description = "Core data structures for GLR parsing: Grammar, ParseTable, Symbol, Tree"
keywords = ["glr", "parser", "grammar", "parse-table", "tree-sitter"]
documentation = "https://docs.rs/glr-core"

[features]
default = ["std"]
std = ["dep:unicode-width"]
serde = ["dep:serde"]
rc = []

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

unicode-width = { version = "0.1", optional = true }
