[package]
name = "glr-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

description = "GLR parser engine: parse loop, Graph-Structured Stack, error recovery"
keywords = ["glr", "parser", "rnglr", "gss", "glr-parser"]
documentation = "https://docs.rs/glr-engine"

[features]
default = ["std"]
std = ["glr-core/std", "glr-lexer/std"]

[dependencies]
glr-core = { path = "../glr-core", default-features = false }
glr-lexer = { path = "../glr-lexer", default-features = false }
