[package]
name = "glr-grammar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

description = "Grammar compiler: reads tree-sitter grammar.json and produces compiled Grammar"

[dependencies]
glr-core = { path = "../glr-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
