[package]
name = "glr-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

description = "Procedural macro for defining GLR grammars via Rust-native DSL"
keywords = ["glr", "macro", "procedural", "grammar", "dsl"]
documentation = "https://docs.rs/glr-macro"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
glr-grammar = { path = "../glr-grammar" }
